// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record path should nest with nested records 1`] = `
[
  {
    "actual": 1,
    "code": "invalid_string",
    "path": [
      "a",
      "b",
    ],
  },
]
`;

exports[`record should not parse arrays 1`] = `
[
  {
    "actual": [],
    "code": "invalid_record",
    "path": [],
  },
]
`;

exports[`record should not parse non-objects 1`] = `
[
  {
    "actual": "",
    "code": "invalid_record",
    "path": [],
  },
]
`;

exports[`record should not parse null 1`] = `
[
  {
    "actual": null,
    "code": "invalid_record",
    "path": [],
  },
]
`;

exports[`record should not parse records with invalid keys 1`] = `
[
  {
    "actual": "b",
    "code": "invalid_literal",
    "expected": "a",
    "path": [
      "b",
    ],
  },
]
`;

exports[`record should not parse records with invalid values 1`] = `
[
  {
    "actual": 2,
    "code": "invalid_string",
    "path": [
      "b",
    ],
  },
]
`;
